Alternate fix for scrollbars that actually works

--- a/stylesheets/workspace.css
+++ b/stylesheets/workspace.css
@@ -161,7 +161,6 @@ body.editor #block_menu{
 
 .stage {
     position: absolute;
-    overflow: hidden;
 	padding-top: 36px;
 	height: 100%;
 	width: 100%;
